--- a/client/src/App.css
+++ b/client/src/App.css
@@ -422,6 +422,7 @@ fieldset,.fieldset {
 }
 
 legend {
+  margin-top:1em;
   font-weight: 800;
 }
 
@@ -816,7 +817,7 @@ transition: all 0.1s ease;
   background: linear-gradient(45deg,#ddd 10%,white 20%,white 80%,#ddd 90%);
 }
 li.activities.select {
-  max-height:3em;
+  min-height:2.5em;
   user-select: none;
   min-width:min-content;
   position:relative;
@@ -841,25 +842,27 @@ display:flex;
 }
 
 .scrollwrapper {
-
+margin-top:1em;
 overflow-x:scroll;
 display: grid;
   place-items: start;
   
-  cursor: grab;
+  cursor: row-resize;
+  box-shadow: 0 0 0 2px #ddd;
 
 }
 .scrollheader {
   position: relative;
   width:100%;
+  
 }
 .scrollheader:before {
   content: "";
   position: absolute;
   width:100px;
-  height: 6em;
+  height: 4em;
   left:0;
-  top:1.5em;
+  top:1em;
   background:
   linear-gradient(to right, white, transparent);
   z-index:5
@@ -868,17 +871,22 @@ display: grid;
   content: "";
   position: absolute;
   width:100px;
-  height: 6em;
+  height: 4em;
   right:0em;
-  top:1.5em;
+  top:1em;
   background:linear-gradient(to left, white, transparent);
   z-index:5
 }
 .hs {
-  display: grid;
+  display: flex; 
+  flex-wrap: wrap;
+  /* 
+  #########################MOBILE ANPASSEN
+  +++++++++++++++++++++++++++++++++++
+  /
   grid-gap: calc(var(--gutter) / 2);
   grid-template-columns: 10px;
-  grid-template-rows: minmax(150px, 1fr);
+  grid-template-rows: minmax(10px, 1fr);
   grid-auto-flow: column;
   grid-auto-columns: calc(5% - var(--gutter) * 2);
 
@@ -886,7 +894,11 @@ display: grid;
   /*scroll-snap-type: x proximity; */
   padding-bottom: calc(.75 * var(--gutter));
   margin-bottom: calc(-.25 * var(--gutter));
-  
+  margin: 0;
+padding: 0;
+height:20em;
+justify-content: center;
+align-items: center;
 }
 .hs.center {
   display: flex;
@@ -896,11 +908,7 @@ display: grid;
     height: 4em;
 }
 
-.hs:before,
-.hs:after {
-  content: '';
-  width: 10px;
-}
+ 
 
 
 /* Demo styles */
@@ -924,6 +932,8 @@ ul {
   align-items: center;
   background: #fff;
   border-radius: 8px;
+  width:7em;
+ 
 }
 
 
@@ -1032,7 +1042,7 @@ canvas {
  
   box-shadow: 0 0 2px 1px #bbd, 0 8px 20px -5px rgba(49, 163, 255, 0.5);
   text-align: center;
-  
+  margin:  0.5em 0.5em 0 0;
 
 
   
@@ -1237,11 +1247,13 @@ main .gmap {
 
 /*************** MEDIA +++++++++++++++++++++++++++++++++*/
 
-@media only screen and (max-width: 40em) {
+@media  (max-width: 40em) {
   header a div {
     display: none;
   }
-
+nav.active {
+  clip-path: polygon(0 0, 22% 0, 22% 100%, 0% 100%);
+}
   nav .profile {
     margin: 0;
   }
@@ -1260,6 +1272,28 @@ main .gmap {
 }
 #usrfrm1 .fieldset .field.manually{
   margin-top:2em;
+}
+
+.hs {
+  display: grid; 
+  
+  
+  grid-gap: calc(var(--gutter) / 2);
+  grid-template-columns: 10px;
+  grid-template-rows: minmax(10px, 1fr);
+  grid-auto-flow: column;
+  grid-auto-columns: calc(5% - var(--gutter) * 2);
+
+  overflow-x: scroll;
+  /*scroll-snap-type: x proximity; */
+  height: 4em;
+  cursor:col-resize;
+}
+li.activities.select {
+min-height:auto;
+}
+.hs > li, .item {
+  width:auto;
 }
 }
 #result3 {
