--- a/client/src/App.css
+++ b/client/src/App.css
@@ -414,6 +414,8 @@ label {
   font-size: 0.85em;
   letter-spacing: 1px;
   margin-bottom:0.5em;
+  
+  width: 7em;
 }
 
 fieldset,.fieldset {
@@ -423,6 +425,7 @@ fieldset,.fieldset {
   border:0;
   display:flex;
   flex-direction: column;
+  
   overflow:hidden;
 }
 
@@ -434,6 +437,7 @@ legend {
 .field {
   width: 100%;
   position: relative;
+  
 
 }
 
@@ -442,14 +446,15 @@ legend {
   justify-content: space-evenly;
   flex-wrap: wrap;
   width: 100%;
+  flex-direction: column;
 }
 
 .fieldrow .field {
   flex: 1;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: flex-end;
-  margin: 0.5em;
+  margin:  0.5em 0.5em 1em 0;
 }
 
 /*
@@ -587,6 +592,7 @@ input:valid:focus~span svg {
 
 .customselect {
   display: flex;
+  flex:1;
 }
 
 .switch {
@@ -646,8 +652,7 @@ input[type="radio"]:checked+.switch--off {
 #usrfrm1 .fieldset  {
   flex-direction:row;
 display:flex;
-max-height:20em;
-min-height:20em;
+min-height:22em;
   
   
 }
@@ -718,8 +723,17 @@ transition: all 0.1s ease;
     align-self:flex-end;
       }
     
- 
-
+ #usrfrm3 .fieldrow .field {
+   flex:1;
+   width:auto;
+   margin: 0.5em 0.5em 0 0;
+ }
+ #usrfrm3 .fieldrow .btn {
+  flex:1;  
+  margin: 2em 0 0 0;
+  line-height: 2.35em;
+box-shadow: 0px 3px 0 0 var(--theme-highlight-color);;
+}
 
 
 .btn {
@@ -805,7 +819,7 @@ transition: all 0.1s ease;
 button.searchfilter {
   text-align:left;
   text-indent:2em;
-  margin-left:0.5em;
+  
   background:white;
   color:black;
   position:relative;
@@ -902,27 +916,7 @@ display: grid;
   width:100%;
   
 }
-.scrollheader:before {
-  content: "";
-  position: absolute;
-  width:100px;
-  height: 4em;
-  left:0;
-  top:1em;
-  background:
-  linear-gradient(to right, white, transparent);
-  z-index:5
-}
-.scrollheader:after {
-  content: "";
-  position: absolute;
-  width:100px;
-  height: 4em;
-  right:0em;
-  top:1em;
-  background:linear-gradient(to left, white, transparent);
-  z-index:5
-}
+
 .hs {
   display: flex; 
   flex-wrap: wrap;
@@ -971,14 +965,12 @@ ul {
 .hs > li,
 .item {
   /*scroll-snap-align: center; */
-  padding: calc(var(--gutter) / 2 * 1.5);
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   background: #fff;
   border-radius: 8px;
-  width:7em;
  
 }
 
@@ -1119,7 +1111,7 @@ canvas {
 .field.duration {
   display: flex;
   flex-direction: row;
-  margin: 0 0 0.5em 0;
+  
   align-items: flex-end;
 }
 
@@ -1319,6 +1311,8 @@ nav.active {
   }
   #usrfrm1 .fieldset {
     flex-wrap: wrap;
+    height:max-content;
+    min-height:max-content;
   }
   #usrfrm1 .fieldset .field.divider{
     display:none;
@@ -1328,6 +1322,7 @@ nav.active {
 }
 #usrfrm1 .fieldset .field.manually{
   margin-top:2em;
+  min-height:23em;
 }
 
 .hs {
